5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1585_2895.log
== TEST (2019-03-21 18:24:18) 
-- CODE:
# Quantidade de jogos a serem encomendados:
n = 5

# O valor unitário de cada jogo:
x = 100.0	

# Valor do frete:
p = 40.0
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:24:37) 
-- CODE:
# Quantidade de jogos a serem encomendados:
n = 5

# O valor unitário de cada jogo:
x = 100.0	

# Valor do frete:
p = 40.0
-- EXECUTION TIME:
0.146316
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:54) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input("Digite a quantidade de jogos: "))

# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:52) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input("Digite a quantidade de jogos: "))

# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:05) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input("Digite a quantidade de jogos: "))

# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.199026
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:11) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input("Digite a quantidade de jogos: "))

# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.156563
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:15) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input("Digite a quantidade de jogos: "))

# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:31) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:36) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0

# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.177617
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:47) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.204475
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:30:25) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = float(input(5))
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
51240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:30:43) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.169236
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:28) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:44) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:31:47) 
-- CODE:
# Quantidade de jogos a serem encomendados:
jogos = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + jogos * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.158278
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:32:12) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:32:14) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:32:16) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.148243
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:32:18) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = 5
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.172795
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:21) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = float(input(" Digite a quantidade de jogos: "))
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:33:29) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = float(input(" Digite a quantidade de jogos: "))
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- EXECUTION TIME:
0.156395
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:43) 
-- CODE:
# Quantidade de jogos a serem encomendados:
quantidade = float(input(" Digite a quantidade de jogos: "))
# O valor unitário de cada jogo:
valor = 100.0
# Valor do frete:
frete = 40.0
total = frete + quantidade * valor
# O preço a ser pago:
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:34:32) 
-- CODE:
quantidade = float(input(" Digite a quantidade de jogos: "))
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:34:44) 
-- CODE:
quantidade = float(input(" Digite a quantidade de jogos: "))
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- EXECUTION TIME:
0.21124
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:34:53) 
-- CODE:
quantidade = 5
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- EXECUTION TIME:
0.158326
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:34:55) 
-- CODE:
quantidade = 5
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:35:01) 
-- CODE:
quantidade = 5
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- EXECUTION TIME:
0.192775
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:57) 
-- CODE:
quantidade = 5
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:36:03) 
-- CODE:
quantidade = 5
valor = 100.0
frete = 40.0
total = frete + quantidade * valor
print(total)
-- EXECUTION TIME:
0.134078
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:36:53) 
-- CODE:
quantidade = 10
valor = 150.0
frete = 30.0
total = frete + quantidade * valor
print(total)
-- EXECUTION TIME:
0.161915
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1530.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1530.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:36:55) 
-- CODE:
quantidade = 10
valor = 150.0
frete = 30.0
total = frete + quantidade * valor
print(total)
-- OUTPUT:
1530.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:37:36) 
-- CODE:
jogo = float(input("Qual o valor unitario do jogo? "))
valor = 150.0
frete = 30.0
total = frete + quantidade * valor
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = frete + quantidade * valor
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:00) 
-- CODE:
jogo = float(input("Qual o valor unitario do jogo? "))
valor = 150.0
frete = 30.0
total = frete + jogo * valor
print(total)
-- OUTPUT:
1830.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:38:09) 
-- CODE:
jogo = float(input("Qual o valor unitario do jogo? "))
valor = 150.0
frete = 30.0
total = frete + jogo * valor
print(total)
-- EXECUTION TIME:
0.182001
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1830.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
36930.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:27) 
-- CODE:
jogo = float(input("Qual o valor unitario do jogo? "))
valor = 100.0
frete = 40.0
total = frete + jogo * valor
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:38:38) 
-- CODE:
jogo = float(input("Qual o valor unitario do jogo? "))
valor = 100.0
frete = 40.0
total = frete + jogo * valor
print(total)
-- EXECUTION TIME:
0.150779
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:05) 
-- CODE:
jogo = float(input("Qual a quantidade de jogos a serem encomendados? "))
valor = float(input("Qual o valor unitario de cada jogo? "))
frete = float(input(" Qual o valor do frete? "))
total = frete + jogo * valor
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:22) 
-- CODE:
jogo = float(input("Qual a quantidade de jogos a serem encomendados? "))
valor = float(input("Qual o valor unitario de cada jogo? "))
frete = float(input(" Qual o valor do frete? "))
total = frete + jogo * valor
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:41:26) 
-- CODE:
jogo = float(input("Qual a quantidade de jogos a serem encomendados? "))
valor = float(input("Qual o valor unitario de cada jogo? "))
frete = float(input(" Qual o valor do frete? "))
total = frete + jogo * valor
print(total)
-- EXECUTION TIME:
0.132369
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:07:58) 
-- CODE:
jogo = float(input("Qual a quantidade de jogos a serem encomendados? "))
valor = float(input("Qual o valor unitario de cada jogo? "))
frete = float(input(" Qual o valor do frete? "))
total = frete + jogo * valor
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:21:02) 
-- CODE:
quantidade = float(input(" Digite a quantidade de jogos a serem encomendados: "))
valor = float(input(" Digite o valor unitario de cada jogo: "))
frete = float(input(" Digite o valor do frete: "))
total = (quantidade * valor) + frete
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:21:24) 
-- CODE:
quantidade = float(input(" Digite a quantidade de jogos a serem encomendados: "))
valor = float(input(" Digite o valor unitario de cada jogo: "))
frete = float(input(" Digite o valor do frete: "))
total = (quantidade * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:21:36) 
-- CODE:
quantidade = float(input(" Digite a quantidade de jogos a serem encomendados: "))
valor = float(input(" Digite o valor unitario de cada jogo: "))
frete = float(input(" Digite o valor do frete: "))
total = (quantidade * valor) + frete
print(total)
-- EXECUTION TIME:
0.14879
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
